[CONNECTOR] rewrite connect source by java 17 record and toList (#1756)